@@ -1,3 +1,8 @@
+2013-09-08  Donal Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdMZ.c (StringIsCmd): [Bug 3600057]: Filled out missing
+	parts of implementation of [string is double].
+
 2013-08-01  Harald Oehlmann  <oehhar@users.sf.net>
 
 	* tclUnixNotify.c Tcl_InitNotifier: Bug [a0bc856dcd]
